+ implement the MSnbase Spectra/Spectrum2 as the container for MS2 
  spectra, change all functions that they accept Spectra objects
+ write function convertMsp2Spectra that converts MSP files to 
  Spectra files
+ change data files: change convertMSP2MSP.RData to convertMsp2Spectra, 
  create spectra.RData, update similarityMat.RData
+ remove data files: binnedMSP.RData, idMSMStoMSP.RData

Changes in version 1.13.1 (2019-04-04)
+ check if package passes R CMD build and R CMD check without
  any error messages and vignette can be run without any errors

Changes in version 1.11.1 (2018-10-22)
+ adjust NEWS file to new format according to ?news: 
  o entries are grouped according to version, with version header 
    'Changes in version' at the beginning of a line, followed by a version 
    number, optionally followed by an ISO 8601 format date, possibly 
    parenthesized
  o entries may be grouped according to category, with a category header 
    (different from a version header) starting at the beginning of a line
  o entries are written as itemize-type lists, using one of o, *, - or + as 
    item tag. Entries must be indented, and ideally use a common indentation 
    for the item texts

Changes in version 1.11.0 (2018-10-15)
+ remove Makefile from directory vignettes/
+ check if package passes R CMD build and R CMD check without
  any error messages and vignette can be run without any errors

Changes in version 1.9.0 (2018-04-16)
+ no changes, check if package passes R CMD build and R CMD check without
  any error messages and vignette can be run without any errors
   
Changes in version 1.7.0 (2017-11-14)
+ implement calculation for parameter m = 0 in NDP 

Changes in version 1.5.0 (2017-10-20)
+ no changes, check if package passes R CMD build and R CMD check without
  any error messages and vignette can be run without any errors

Changes in version 1.1.6 (2017-06-05)
+ correct bug fix for msp binning when there is only one entry for msp entry 