@@ -1,6 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-export(allocatePrecursor2mz)
 export(cart2Polar)
 export(circosLegend)
 export(compare_Spectra)
@@ -22,6 +21,7 @@ import(MSnbase)
 import(S4Vectors)
 import(amap)
 import(circlize)
+import(ggplot2)
 import(grDevices)
 import(graphics)
 import(scales)
