@@ -138,14 +138,17 @@ thresholdLinkDf <- function(link0df, lower=0.75, upper=1) {
 #' @name createLinkDf
 #' @title Create a data frame which contains features to link (indices)
 #' @description Create a data frame which contains features to link (indices)
-#' @usage createLinkMatrix(similarityMatrix, threshold_low, threshold_high)
+#' @usage createLinkDf(similarityMatrix, spectra, condition, lower, upper) 
 #' @param similarityMatrix \code{matrix}, a similarity matrix that contains the 
 #' similarity measure between all precursors in the data set
+#' @param spectra Spectra object containing spectra of similarityMatrix
+#' @param condition \code{character}, vector containing the 
+#' conditions/samples for which a linkDf is created
 #' @param lower \code{numeric}, threshold value for similarity values, 
 #' below this value linked features will not be included
 #' @param upper \code{numeric}, threshold value for similarity values, 
 #' above this value linked features will not be included
-#' @details \code{threshold_low} and \code{threshold_high} are numerical values 
+#' @details \code{lower} and \code{upper} are numerical values 
 #' and truncate similar spectra. The function createLinkDf is a wrapper 
 #' for the functions createLink0Df and thresholdLinkDf.
 #' @return \code{createLinkDf} returns a data frame that gives per each row 
